manifest/demoteam/purge-varnish/acc/manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: purge-varnish
    env: acc
    team: demoteam
  name: purge-varnish
spec:
  template:
    metadata:
      annotations:
        fnatt.io/inject-ca-bundle: enabled
        fnatt.io/inject-ca-env: enabled
      labels:
        team: demoteam
        app: purge-varnish
        env: acc
    spec:
      securityContext:
        runAsNonRoot: true
      containers:
      - image: nginxinc/nginx-unprivileged:alpine3.22-perl
        resources:
          requests:
            cpu: '0.5'
            memory: 512Mi
          limits:
            cpu: '1'
            memory: 1Gi
        securityContext:
          capabilities:
            drop:
            - ALL
          allowPrivilegeEscalation: false
        ports:
        - containerPort: 8080
        name: main
  selector:
    matchLabels:
      team: demoteam
      app: purge-varnish
      env: acc
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: purge-varnish
    env: acc
    team: demoteam
  name: purge-varnish
spec:
  ingressClassName: ingress-nginx-pm
  rules:
  - host: purge-varnish.acc.fnatt.no
    http:
      paths:
      - path: /
        backend:
          service:
            port:
              number: 80
            name: purge-varnish
        pathType: Prefix
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: purge-varnish
    env: acc
    team: demoteam
  name: purge-varnish
spec:
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
  selector:
    app: purge-varnish
    env: acc
    team: demoteam
